@@ -18,6 +18,7 @@
 === Bug fixes
 
 - https://github.com/eclipse-syson/syson/issues/870[#870] Fix an issue while computing the name of `VariantMembership`. 
+- https://github.com/eclipse-syson/syson/issues/1083[#1083] Fix an issue where resolving against "unrestricted" name did not work
 
 === Improvements
 
